...
                .tabItem {
                    Label("基本要素", systemImage: "square.grid.2x2")
                }

            IdentifierLabelView()
                .tabItem {
                    Label("ID/Label", systemImage: "tag")
                }

            GroupingView()
                .tabItem {
                    Label("Grouping", systemImage: "rectangle.3.group")
                }

            DecorativeView()
                .tabItem {
                    Label("Decorative", systemImage: "paintbrush")
                }

            AboutView()
                .tabItem {
                    Label("About", systemImage: "info.circle")
                }
...
